fixed card align items

--- a/src/components/Pricing/Pricing.component.css
+++ b/src/components/Pricing/Pricing.component.css
@@ -272,6 +272,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   height: min-content;
 
